Fix overlay preventing Login from taking up full height on small devices by setting overlay's display to none

--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -154,6 +154,10 @@
             .buttons {
                 flex-direction: column;
             }
+
+            .overlay {
+                display: none;
+            }
         }
     }
 }
